Add css/main.css in Semana2

--- a/Semana2/index.html
+++ b/Semana2/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css" />
     <title>Bem CSS Exemplo</title>
 </head>
 <body>
@@ -10,16 +11,16 @@
         <div class="card__header"></div>
         <div class="card__content">
             <ul class="card__list">
-                <li class="card__item card_item_modifier"> Adobe XD </li>
+                <li class="card__item card__item--active"> Adobe XD </li>
                 <li class="card__item"> Figma </li>
                 <li class="card__item"> Sketch </li>
             </ul>
             <p class="card__description">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quo ipsam excepturi debitis alias cupiditate quae unde accusamus est autem!
             </p>
-            <buttom class="card__buttom">
+            <button class="card__button">
                 Visit the link
-            </buttom>
+            </button>
         </div>
     </section>    
 </body>
